testsuite/tests/parser/should_fail/T3811f.stderr

T3811f.hs:4:7: error: [GHC-47568]
    Malformed head of type or class declaration: !Foo a
